--- a/src/layouts/header/header.css
+++ b/src/layouts/header/header.css
@@ -8,7 +8,7 @@
 
 .headerNameWrapper {
   position: fixed;
-  top: 5%;
+  top: 7%;
 }
 
 #headerName {
@@ -31,7 +31,6 @@
   color: #fff;
   opacity: 0.6;
   letter-spacing: 0.25em;
-  backdrop-filter: blur(2px);
 }
 
 /* Devices with 768px width and below. (Phones and Tablets) */
