--- a/src/layouts/slogan/slogan.css
+++ b/src/layouts/slogan/slogan.css
@@ -28,7 +28,7 @@
   #slogan {
     width: 100%;
     position: fixed;
-    top: 80%;
+    top: 75%;
   }
 
   .sHeader {
